--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -31,6 +31,10 @@ a
   background-color: blue
   height: 40px
 
+.grey
+  color: grey
+  font-weight: 300
+
 .green
   background-color: green
   height: 40px
@@ -38,6 +42,9 @@ a
 .red
   background-color: red
   height: 40px
+
+.white
+  color: white
 
 .info
   background-color: white
@@ -79,13 +86,6 @@ body
   position: relative
   display: inline-block
   text-align: center
-
-.timerz
-  position: absolute
-  top: 10px
-  left: 28px
-  width: 200px
-  padding: 4px
 
 .buttonz
   position: absolute
