--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,7 @@
 
 <div id="footer">
     <div class="container">
-      <p class="footer-block">Make a cool footer with a bunch of useless infos
-        <span class="notice"><%= notice %></span>
-        <span class="alert"><%= alert %></span></p>
+      <p class="footer-block">Make a cool footer with a bunch of useless infos</p>
     </div>
   </div>
 </body>
