--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -59,23 +59,23 @@
 
     <div id="<%= tournament.id %>">
     <% if tournament.is_live? %>
-    <span class="titling">
+    <span class="h4">
       <span class="label label-success">Live</span> <%= tournament.name%>
-    </span>
+    </span><br>
       <span id="<%= tournament.id %>-default-index-text" class="" >
-        <%= tournament.city %> – <%= tournament.start_date %>
-      </span>
-      <span id="<%= tournament.id %>-hover-index-text"  style="display:none" >
-        <%= tournament.description[0..170].gsub(/\s\w+\s*$/, '...') %>
-      </span>
-    <% else %>
-    <span class="titling"><%= tournament.short_title%></span>
-
-      <span id="<%= tournament.id %>-default-index-text" class="" >
-        <%= tournament.city %> – <%= tournament.start_date %>
+        <p style="padding-top:7px"><b><%= tournament.city %></b> – <%= tournament.start_date %></p>
       </span>
       <span id="<%= tournament.id %>-hover-index-text" style="display:none" >
-        <%= tournament.description[0..40].gsub(/\s\w+\s*$/, '...') %>
+        <p style="padding-top:7px"><%= tournament.description[0..170].gsub(/\s\w+\s*$/, '...') %></p>
+      </span>
+    <% else %>
+    <span class="h4"><%= tournament.short_title%></span><br>
+
+      <span id="<%= tournament.id %>-default-index-text" class="" >
+        <b><%= tournament.city %></b> – <%= tournament.start_date %>
+      </span>
+      <span id="<%= tournament.id %>-hover-index-text" style="display:none" >
+        <p><%= tournament.description[0..40].gsub(/\s\w+\s*$/, '...') %></p>
       </span>
     <% end %>
 
@@ -86,11 +86,10 @@
   <% end %>
 </div>
 
-
 <script>
 $('img').hover(function(){
     var imageId = $(this).attr("id")
-    $("#"+imageId+"-default-index-text").fadeOut(200, function(){
+    $("#"+imageId+"-default-index-text").fadeOut(100, function(){
       $("#"+imageId+"-hover-index-text").fadeIn();
     });
 },function(){
