--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -12,7 +12,7 @@
       <div class="col-md-6 col-sm-6 h1"><%= @tournament.short_title %></div>
        <div class="col-md-6 col-sm-6 h1 grey text-right">
         <span id="clockdiv">
-          <span class="days text-right"></span> | <span class="hours"></span>:<span class="minutes"></span>:<span class="seconds"></span>
+          <span class="days text-right"></span> <span class="hours"></span> <span class="minutes"></span> <span class="seconds"></span>
         </span></h1>
       </div>
     </div>
