--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,4 +1,5 @@
 <!-- Timer -->
+<% if current_user %>
 <% t = @tournament.start_date.to_s  %>
 <% t.gsub!(" UTC", "") %>
 <% parsable = t.gsub!(" ", "T") %>
@@ -73,5 +74,5 @@
   </div>
 
 </div>
-
+<% end %>
 
