remove json files

--- a/app/views/tournaments/index_calendar.html.erb
+++ b/app/views/tournaments/index_calendar.html.erb
@@ -37,3 +37,5 @@
     </div>
 
 </div>
+
+<object data="https://calendar.google.com/calendar/embed?src=contact.esportal%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></object>
