--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -13,7 +13,7 @@
       <div class="col-md-6 col-sm-6 h1"><%= @tournament.short_title %></div>
        <div class="col-md-6 col-sm-6 h1 grey text-right">
         <span id="clockdiv">
-          <span class="days text-right"></span> | <span class="hours"></span>:<span class="minutes"></span>:<span class="seconds"></span>
+          <span class="days text-right"></span> <span class="hours"></span><span class="minutes"></span><span class="seconds"></span>
         </span>
       </div>
     </div>
@@ -75,8 +75,8 @@
       <%= competitor %> /
       <% end %>
     </section>
-      
-      <script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js"></script> 
+
+      <script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js"></script>
 
 
       <div title="Add to Calendar" class="addeventatc">
@@ -88,7 +88,7 @@
           <span class="description"><%= @tournament.description %></span>
           <span class="location"><%= @tournament.city %></span>
           <span class="date_format">MM/DD/YYYY</span>
-      </div> 
+      </div>
 
 
       </div>
