--- a/app/views/events/_calendar.html.erb
+++ b/app/views/events/_calendar.html.erb
@@ -7,6 +7,7 @@
 <div class="col-md-12">
     <div class="thumbnail">
       <a><img src="<%= event.image %>"></a>
+    </div>
       <div class="caption">
         <span class="h3"><%= event.short_title %></span>
       </div>
