Fix &nbsp; and update tournament#show

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -55,8 +55,7 @@ a:hover
   height: 40px
 
 .red
-  background-color: red
-  height: 40px
+  color: $bgDefault !important
 
 .white
   color: white
@@ -115,6 +114,11 @@ body
   right: 140px
   width: 100px
   padding: 4px
+
+.buttonx
+  position: absolute
+  top: 10px
+  left: 10px
 
 .navbar-default
   background-color: $bgDefault
@@ -459,3 +463,6 @@ svg image
 
 svg image:hover
   opacity: 0
+
+.btn-competitor
+  margin-bottom: 3px
