--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -103,14 +103,14 @@ body
 
 .buttonz
   position: absolute
-  bottom: 10px
+  bottom: 30px
   right: 28px
   width: 100px
   padding: 4px
 
 .buttony
   position: absolute
-  bottom: 10px
+  bottom: 30px
   right: 140px
   width: 100px
   padding: 4px
@@ -466,3 +466,6 @@ svg image:hover
 
 .btn-competitor
   margin-bottom: 3px
+
+form
+  display: inline-block !important
