--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -6,7 +6,7 @@
       <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
       <div class="input-append">
       <%= text_field_tag :search, params[:search], class: "form-control btn-border", placeholder: "Search Items" %>
-      <span class="input-group-btn "><button class="btn btn-warning btn-border" type="submit">&nbsp;<i class="fa fa-search"></i>&nbsp;</button></span>
+      <span class="input-group-btn "><button class="btn btn-warning btn-border" type="submit">&nbsp;search&nbsp;</button></span>
       <% end %>
       </div>
     </div>
