Remove image col from tourns. Change various references to old field names

--- a/app/views/timertests/index.html.erb
+++ b/app/views/timertests/index.html.erb
@@ -1,4 +1,4 @@
-<% t = @tournaments.first.start_date.to_s  %>
+<% t = @tournaments.first.start.to_s  %>
 <% t.gsub!(" UTC", "") %>
 <% parsable = t.gsub!(" ", "T") %>
 <%= parsable %>
