--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,6 +1,6 @@
 <!-- Timer -->
 <% if current_user %>
-<% t = @tournament.start_date.to_s  %>
+<% t = @tournament.start.to_s  %>
 <% t.gsub!(" UTC", "") %>
 <% parsable = t.gsub!(" ", "T") %>
 <script>var deadline = "<%= parsable %>";</script>
@@ -25,9 +25,9 @@
 <div class="row">
   <div class="col-md-12">
     <div class="portfolio-item thumbnail">
-      <% if @tournament.image %>
+      <% if @tournament.image_default %>
       <img class="hidden-xs" src="<%= @tournament.large %>">
-      <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image %>">
+      <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image_default %>">
       <% else %>
       <img class="grayscale" style="max-height:200px; width:100%" src="http://goo.gl/7ezbJB">
       <% end %>
@@ -51,7 +51,7 @@
   <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
     <div class="hidden-sm hidden-xs" style="border-right:1px solid black"></div>
       <section style="padding-bottom:10px">
-        <span class="h2"><%= @tournament.name %></span>
+        <span class="h2"><%= @tournament.title %></span>
       </section>
       <section>
         <p>  <b>Location: <%= @tournament.city %></b> – <%= @tournament.description.gsub(/(&nbsp;)/, ' ') %></p>
@@ -65,8 +65,8 @@
       <section style="padding-bottom:10px">
         <span class="h2"><i class="fa red fa-video-camera"></i> <%= link_to "Stream", stream.link %>
 
-                   <span class="mon date"><%= Date::MONTHNAMES[@tournament.start_date.mon] %></span>
-          <span class="day date"><%= @tournament.start_date.day %></span>
+                   <span class="mon date"><%= Date::MONTHNAMES[@tournament.start.mon] %></span>
+          <span class="day date"><%= @tournament.start.day %></span>
           <div class="bdr1"></div>
           <div class="bdr2"></div>
 
