--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       <span class="h3">Favorite Tournaments</span>
       <% if @favorite_tournaments %> <br><hr>
       <% @favorite_tournaments.each do |favorite_tournament| %>
-      <%= link_to favorite_tournament.name, tournament_path(favorite_tournament) %><br>
+      <%= link_to favorite_tournament.title, tournament_path(favorite_tournament) %><br>
       <% end %>
       <% else %>
       <p> No favorites yet </p>
